# STD-Stream-Timer

./: CMakeLists.txt  README.md  Timer.h
test/: CMakeLists.txt  possible_ouput.txt  test.cpp  usage_case.txt
